SUBDIRS = Sources Setup Setup/pkgconfig @ClanLib_docs@

# EXAMPLE_SRC_PREFIX = $(datadir)/doc/ClanLib-docs-@version_minor@/Examples

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = \
CODING_STYLE CREDITS COPYING \
INSTALL.borland INSTALL.linux INSTALL.win32 INSTALL.mingw PATCHES  \
README README.distros README.kdevelop \
README.upgrade

# EOF #

